# RK2

./: CMakeLists.txt  main.cpp  singleton_class.cpp  test_s.cpp
.github/workflows/: github-actions.yml
